--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,17 @@ jobs:
         with:
           name: screenshot-diff
           path: tests/screenshot/__image_snapshots__/__diff_output__
+  integration-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: execute tests
+        run: curl "https://raw.githubusercontent.com/schul-cloud/integration-tests/develop/scripts/ci/fetch.github.sh" | bash
+      - uses: actions/upload-artifact@v1
+        name: upload results
+        if: always()
+        with:
+          name: report
+          path: integration-tests/reports
   # build:
   #   strategy:
   #     matrix:
