remove "git add" from lint-staged config
"From v10.0.0 onwards any new modifications to originally staged files will be automatically added to the commit. If your task previously contained a git add step, please remove this. The automatic behaviour ensures there are less race-conditions, since trying to run multiple git operations at the same time usually results in an error."
https://github.com/okonet/lint-staged#v10

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"test": "npm run test:unit"
 	},
 	"gitHooks": {
-		"pre-commit": "cross-env PRE_COMMIT=true lint-staged"
+		"pre-commit": "npx lint-staged"
 	},
 	"dependencies": {
 		"@nuxtjs/axios": "^5.9.5",
