implement github suggestions to trigger action when label gets added
https://github.community/t5/GitHub-Actions/Run-actions-on-Pull-Requests-with-merge-conflicts/m-p/40229
https://github.community/t5/GitHub-Actions/Conditional-job-execution-for-a-specific-label-name/m-p/49048

--- a/.github/workflows/pr-automation-dependabot-recreate.yml
+++ b/.github/workflows/pr-automation-dependabot-recreate.yml
@@ -2,15 +2,15 @@ name: PR Automation
 
 on:
   pull_request:
-    types: ["edited", "labeled", "synchronize"]
+    types: ["labeled"]
 
 jobs:
   dependabot_recreate:
     name: "@dependabot recreate"
-    if: contains(github.event.pull_request.user.login, 'dependabot') && contains(github.event.pull_request.labels.*.name, 'has conflicts')
     runs-on: ubuntu-latest
     steps:
       - name: dependabot recreate PR
+        if: "contains(github.event.pull_request.user.login, 'dependabot') && contains(github.event.pull_request.labels.*.name, 'has conflicts')"
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.SC_BOT_GITHUB_TOKEN }}
