--- a/.github/workflows/pr-automation-dependabot-recreate.yml
+++ b/.github/workflows/pr-automation-dependabot-recreate.yml
@@ -1,20 +1,19 @@
 name: PR Automation
 
 on:
-  issues:
-    types: [labeled]
+  pull_request:
+    types: [synchronize]
 
 jobs:
   dependabot_recreate:
     name: "@dependabot recreate"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        if: "contains(github.event.issue.user.login, 'dependabot') && contains(github.event.issue.labels.*.name, 'has conflicts')"
-      - name: comment dependabot recreate PR
-        if: "contains(github.event.issue.user.login, 'dependabot') && contains(github.event.issue.labels.*.name, 'has conflicts')"
-        uses: actions/github@v1.0.0
+      - name: dependabot recreate PR
+        if: "contains(github.event.pull_request.user.login, 'dependabot') && contains(github.event.pull_request.labels.*.name, 'has conflicts')"
+        uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.SC_BOT_GITHUB_TOKEN }}
         with:
-          args: comment '@dependabot recreate'
+          msg: "@dependabot recreate"
+          check_for_duplicate_msg: false
