--- a/.github/workflows/pr-automation-comment-reaction.yml
+++ b/.github/workflows/pr-automation-comment-reaction.yml
@@ -33,3 +33,20 @@ jobs:
         if: steps.prcomm.outputs.BOOL_TRIGGERED == 'true'
         with:
           commit_message: update screenshots
+  dependabot-recreate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: listen for PR Comments
+        uses: machine-learning-apps/actions-chatops@master
+        with:
+          TRIGGER_PHRASE: "@schul-cloud-bot tell dependabot to recreate PR"
+        env:
+          GITHUB_TOKEN: ${{ secrets.SC_BOT_GITHUB_TOKEN }}
+        id: prcomm
+      - name: tell dependabot to recreate pr
+        if: steps.prcomm.outputs.BOOL_TRIGGERED == 'true'
+        uses: peter-evans/create-or-update-comment@v1
+        with:
+          token: ${{ secrets.SC_BOT_GITHUB_TOKEN }}
+          issue-number: ${{ steps.prcomm.outputs.PULL_REQUEST_NUMBER }}
+          body: "@dependabot recreate"
