--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"font-awesome": "^4.7.0",
 		"git-rev-sync": "^2.0.0",
 		"glob": "^7.1.6",
+		"html-entities": "^1.2.1",
 		"jwt-decode": "^2.2.0",
 		"kjua": "^0.6.0",
 		"material-icons-svg": "^1.0.0",
