--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
 		"jest": "^24.1.0",
 		"jest-canvas-mock": "^2.2.0",
 		"jest-haste-map": "^25.1.0",
-		"jest-image-snapshot": "git+https://github.com/schul-cloud/jest-image-snapshot.git",
+		"jest-image-snapshot": "^3.0.1",
 		"jest-puppeteer": "^4.4.0",
 		"jest-resolve": "^25.1.0",
 		"jest-serializer-vue": "^2.0.2",
