--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -4,5 +4,5 @@ mergeable:
     validate:
       - do: title
         must_include:
-          regex: "((SC|VUE|OPS)-[0-9]+|Quickfix) - .*"
+          regex: "(((SC|VUE|OPS)-[0-9]+|Quickfix) - .*|Bump .* from.* to .*)"
           message: "The title must follow the schema: '(TICKET-ID|Quickfix) - [description]'."
