--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -4,5 +4,17 @@ mergeable:
     validate:
       - do: title
         must_include:
-          regex: "(((SC|VUE|OPS)-[0-9]+|Quickfix) - .*|Bump .* from.* to .*|Hotfix ([0-9]+\.){2}[0-9]+.*)"
-          message: "The title must follow the schema: '(TICKET-ID|Quickfix) - [description]' or 'Hotfix x.y.z'."
+          regex: "(((SC|VUE|OPS)-[0-9]+|Quickfix) - .*|Bump .* from.* to .*|Hotfix ([0-9]+\\.){2}[0-9]+.*)"
+          message: "The title must follow the schema: '(TICKET-ID|Quickfix) - [description]' or 'Hotfix 0.0.0'."
+      - do: label
+        must_exclude:
+          regex: "(WIP|is blocked)"
+  - when: schedule.repository
+    validate:
+      - do: stale
+        days: 20
+        type: pull_request, issues
+    pass:
+      - do: comment
+        payload:
+          body: This is old. Is it still relevant?
