--- a/package.json
+++ b/package.json
@@ -82,9 +82,10 @@
 		"@schul-cloud/eslint-config": "^0.4.0",
 		"@schul-cloud/prettier-config": "^0.2.0",
 		"@schul-cloud/stylelint-config": "^0.1.5",
-		"@schul-cloud/styles": "^0.1.9",
+		"@schul-cloud/styles": "^0.2.0",
 		"@storybook/addon-a11y": "^5.3.18",
 		"@storybook/addon-actions": "^5.3.18",
+		"@storybook/addon-backgrounds": "^5.3.18",
 		"@storybook/addon-centered": "^5.3.18",
 		"@storybook/addon-knobs": "^5.3.18",
 		"@storybook/addon-notes": "^5.3.18",
