--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"vue-echarts": "^4.0.4",
 		"vue-filter-ui": "^0.8.0",
 		"vue-flatpickr-component": "^8.1.5",
+		"vue-fragment": "^1.5.1",
 		"vue-i18n": "^8.17.4",
 		"vue-loader": "^15.9.2",
 		"vue-mq": "^1.0.1",
