--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,6 +63,7 @@ jobs:
   integration:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: execute tests
         run: curl "https://raw.githubusercontent.com/schul-cloud/integration-tests/develop/scripts/ci/fetch.github.sh" | bash
       - uses: actions/upload-artifact@v1
