--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,10 +63,16 @@ jobs:
   integration:
     runs-on: ubuntu-latest
     steps:
+      - name: create .netrc file
+        run: |
+          echo -e "machine github.com\n  login ${CI_USER_TOKEN}" > ~/.netrc
       - name: execute tests
         run: curl "https://raw.githubusercontent.com/schul-cloud/integration-tests/develop/scripts/ci/fetch.github.sh" | bash
       - uses: actions/upload-artifact@v1
         name: upload results
+      - name: delete .netrc file
+        run: |
+          rm ~/.netrc
         if: always()
         with:
           name: report
