borrowed solution for integration tests from SC-4249

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,6 +63,9 @@ jobs:
   integration:
     runs-on: ubuntu-latest
     steps:
+      - name: Set git config
+            run: |
+              git config --global url."https://${CI_USER_TOKEN}@github.com/".insteadOf "https://github.com/"
       - name: execute tests
         run: curl "https://raw.githubusercontent.com/schul-cloud/integration-tests/develop/scripts/ci/fetch.github.sh" | bash
       - uses: actions/upload-artifact@v1
@@ -71,6 +74,9 @@ jobs:
         with:
           name: report
           path: integration-tests/reports
+      - name: Unset git config
+          run: |
+            git config --global --unset url."https://${CI_USER_TOKEN}@github.com/".insteadOf
   # build:
   #   strategy:
   #     matrix:
