--- a/.github/workflows/surge-teardown.yml
+++ b/.github/workflows/surge-teardown.yml
@@ -3,12 +3,15 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: "0 4 */7 * *"
+  push:
+    branches: 
+      - develop
 jobs:
   surge-teardown:
     runs-on: ubuntu-latest
     steps:
       - name: teardown
-        uses: adrianjost/actions-surge.sh-teardown@v1.0.2
+        uses: adrianjost/actions-surge.sh-teardown@master
         with:
           # teardown projects older than 2 months
           regex: "[2-9]+ months ago"
