--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
 		"@storybook/addon-viewport": "^5.3.18",
 		"@storybook/addons": "^5.3.18",
 		"@storybook/vue": "^5.3.18",
-		"@vue/test-utils": "^1.0.0-beta.33",
+		"@vue/test-utils": "^1.0.3",
 		"@vuepress/plugin-pwa": "^1.5.0",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-jest": "^26.0.1",
@@ -123,7 +123,7 @@
 		"jest-serializer-vue": "^2.0.2",
 		"lint-staged": "^10.2.4",
 		"lodash": "^4.17.15",
-		"markdownlint-cli": "^0.22.0",
+		"markdownlint-cli": "^0.23.1",
 		"node-sass": "^4.14.1",
 		"npm-run-all": "^4.1.5",
 		"nuxt-babel": "^1.0.1",
