--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
 		"@storybook/addon-viewport": "^5.3.18",
 		"@storybook/addons": "^5.3.18",
 		"@storybook/vue": "^5.3.18",
+		"@testing-library/jest-dom": "^5.9.0",
+		"@testing-library/vue": "^5.0.3",
 		"@vue/test-utils": "^1.0.3",
 		"@vuepress/plugin-pwa": "^1.5.0",
 		"babel-core": "^7.0.0-bridge.0",
