--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       - name: npm run lint
         run: npm run lint:ci
       - name: npm run lint:fix
-        if: failure()
+        if: failure() && matrix.os == 'ubuntu-latest'
         run: npm run lint
       - uses: stefanzweifel/git-auto-commit-action@v4.1.1
         # only run on one of the matrix builds
