--- a/.github/workflows/pr-automation-auto-approve.yml
+++ b/.github/workflows/pr-automation-auto-approve.yml
@@ -2,7 +2,7 @@ name: PR Automation
 on: pull_request
 
 jobs:
-  auto-approve:
+  dependabot-auto-approve:
     runs-on: ubuntu-latest
     steps:
       - uses: hmarr/auto-approve-action@v2.0.0
