first working demo

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"kjua": "^0.6.0",
 		"material-icons-svg": "^1.0.0",
 		"nuxt": "^2.13.1",
+		"moment": "^2.27.0",
 		"tiptap": "^1.27.1",
 		"tiptap-extensions": "^1.29.1",
 		"vue": "^2.6.11",
@@ -68,7 +69,7 @@
 		"vue-flatpickr-component": "^8.1.5",
 		"vue-i18n": "^8.18.2",
 		"vue-loader": "^15.9.3",
-		"vue-mq": "^1.0.1",
+		"vue-full-calendar": "^2.8.1-0",
 		"vue-multiselect": "^2.1.6",
 		"vue-ripple-directive": "^2.0.1",
 		"vue-router": "^3.3.4",
@@ -106,7 +107,6 @@
 		"concurrently": "^5.2.0",
 		"core-js": "^3.6.5",
 		"cross-env": "^7.0.2",
-		"css-loader": "^3.6.0",
 		"eslint": "^6.8.0",
 		"eslint-loader": "^4.0.2",
 		"faker": "^4.1.0",
