--- a/package.json
+++ b/package.json
@@ -59,17 +59,18 @@
 		"jwt-decode": "^2.2.0",
 		"kjua": "^0.6.0",
 		"material-icons-svg": "^1.0.0",
-		"nuxt": "^2.13.1",
 		"moment": "^2.27.0",
+		"nuxt": "^2.13.1",
 		"tiptap": "^1.27.1",
 		"tiptap-extensions": "^1.29.1",
 		"vue": "^2.6.11",
 		"vue-echarts": "^4.0.4",
 		"vue-filter-ui": "^0.8.0",
 		"vue-flatpickr-component": "^8.1.5",
+		"vue-full-calendar": "^2.8.1-0",
 		"vue-i18n": "^8.18.2",
 		"vue-loader": "^15.9.3",
-		"vue-full-calendar": "^2.8.1-0",
+		"vue-mq": "^1.0.1",
 		"vue-multiselect": "^2.1.6",
 		"vue-ripple-directive": "^2.0.1",
 		"vue-router": "^3.3.4",
