--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
 		"jest-resolve": "^26.0.1",
 		"jest-serializer-vue": "^2.0.2",
 		"lint-staged": "^10.2.4",
-		"lodash": "^4.17.15",
+		"lodash": "4.17.15",
 		"markdownlint-cli": "^0.23.1",
 		"node-sass": "^4.14.1",
 		"npm-run-all": "^4.1.5",
