--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "schulcloud-nuxt",
 	"version": "23.5.0",
-	"description": "The next Level of Schul-Cloud",
+	"description": "The next Level of HPI Schul-Cloud",
 	"author": "HPI Schul-Cloud",
 	"private": true,
 	"scripts": {
