--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"pre-commit": "npx lint-staged"
 	},
 	"dependencies": {
+		"@cubejs-client/core": "^0.20.0",
+		"@cubejs-client/vue": "^0.20.0",
 		"@nuxtjs/axios": "^5.12.1",
 		"@nuxtjs/sentry": "^4.3.4",
 		"@nuxtjs/toast": "^3.3.1",
